--- a/task02_query.ipynb
+++ b/task02_query.ipynb
@@ -234,6 +234,469 @@
     "\n",
     "feedback_by_category"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2.3Gộp feedback và citizen để lấy area\n",
+    "feedback_area = feedback_df.merge(\n",
+    "    citizen_df[['citizen_id', 'area']],\n",
+    "    on='citizen_id',\n",
+    "    how='left'\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area</th>\n",
+       "      <th>channel</th>\n",
+       "      <th>feedback_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>phuong a</td>\n",
+       "      <td>app</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>phuong a</td>\n",
+       "      <td>hot line</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>phuong a</td>\n",
+       "      <td>website</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>phuong a</td>\n",
+       "      <td>hotline</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>phuong a</td>\n",
+       "      <td>tr·ª±c ti·∫øp</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ph∆∞·ªùng a</td>\n",
+       "      <td>website</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ph∆∞·ªùng a</td>\n",
+       "      <td>app</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ph∆∞·ªùng a</td>\n",
+       "      <td>web site</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>quan 1</td>\n",
+       "      <td>app</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>quan 1</td>\n",
+       "      <td>hotline</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>quan 1</td>\n",
+       "      <td>tr·ª±c ti·∫øp</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>quan 1</td>\n",
+       "      <td>hot line</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>quan 1</td>\n",
+       "      <td>truc tiep</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>quan 1</td>\n",
+       "      <td>website</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>qu·∫≠n 1</td>\n",
+       "      <td>app</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>qu·∫≠n 1</td>\n",
+       "      <td>hot line</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>qu·∫≠n 1</td>\n",
+       "      <td>hotline</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>qu·∫≠n 1</td>\n",
+       "      <td>tr·ª±c ti·∫øp</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>qu·∫≠n 1</td>\n",
+       "      <td>website</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>xa  b</td>\n",
+       "      <td>hot line</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>xa  b</td>\n",
+       "      <td>web site</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>xa  b</td>\n",
+       "      <td>website</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>xa b</td>\n",
+       "      <td>tr·ª±c ti·∫øp</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>xa b</td>\n",
+       "      <td>website</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>x√£ b</td>\n",
+       "      <td>app</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>x√£ b</td>\n",
+       "      <td>hot line</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>x√£ b</td>\n",
+       "      <td>truc tiep</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           area        channel  feedback_count\n",
+       "0      phuong a            app               4\n",
+       "1      phuong a       hot line               3\n",
+       "4      phuong a        website               2\n",
+       "2      phuong a        hotline               1\n",
+       "3      phuong a  tr·ª±c ti·∫øp               1\n",
+       "7   ph∆∞·ªùng a        website               2\n",
+       "5   ph∆∞·ªùng a            app               1\n",
+       "6   ph∆∞·ªùng a       web site               1\n",
+       "8        quan 1            app               7\n",
+       "10       quan 1        hotline               4\n",
+       "12       quan 1  tr·ª±c ti·∫øp               3\n",
+       "9        quan 1       hot line               2\n",
+       "11       quan 1      truc tiep               2\n",
+       "13       quan 1        website               1\n",
+       "14     qu·∫≠n 1            app               6\n",
+       "15     qu·∫≠n 1       hot line               3\n",
+       "16     qu·∫≠n 1        hotline               3\n",
+       "17     qu·∫≠n 1  tr·ª±c ti·∫øp               1\n",
+       "18     qu·∫≠n 1        website               1\n",
+       "19        xa  b       hot line               1\n",
+       "20        xa  b       web site               1\n",
+       "21        xa  b        website               1\n",
+       "22         xa b  tr·ª±c ti·∫øp               1\n",
+       "23         xa b        website               1\n",
+       "24        x√£ b            app               5\n",
+       "25        x√£ b       hot line               1\n",
+       "26        x√£ b      truc tiep               1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#group by channel+area\n",
+    "feedback_by_channel_area = (\n",
+    "    feedback_area\n",
+    "    .groupby(['area', 'channel'])\n",
+    "    .size()\n",
+    "    .reset_index(name='feedback_count')\n",
+    "    .sort_values(['area', 'feedback_count'], ascending=[True, False])\n",
+    ")\n",
+    "\n",
+    "feedback_by_channel_area\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feedback_id</th>\n",
+       "      <th>citizen_id</th>\n",
+       "      <th>category</th>\n",
+       "      <th>channel</th>\n",
+       "      <th>department</th>\n",
+       "      <th>submit_time</th>\n",
+       "      <th>status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FB1001</td>\n",
+       "      <td>CD114</td>\n",
+       "      <td>ha tang</td>\n",
+       "      <td>web site</td>\n",
+       "      <td>phong  tnmt</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FB1002</td>\n",
+       "      <td>CD142</td>\n",
+       "      <td>ha  tang</td>\n",
+       "      <td>hotline</td>\n",
+       "      <td>ubnd  phuong</td>\n",
+       "      <td>2024-01-30 15:36:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>FB1003</td>\n",
+       "      <td>cd102</td>\n",
+       "      <td>m√¥i tr∆∞·ªùng</td>\n",
+       "      <td>hot line</td>\n",
+       "      <td>cong  an</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>FB1007</td>\n",
+       "      <td>CD127</td>\n",
+       "      <td>ha tang</td>\n",
+       "      <td>website</td>\n",
+       "      <td>cong  an</td>\n",
+       "      <td>2024-02-28 12:23:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>FB1009</td>\n",
+       "      <td>cd147</td>\n",
+       "      <td>thu tuc</td>\n",
+       "      <td>hotline</td>\n",
+       "      <td>phong tnmt</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>FB1106</td>\n",
+       "      <td>CD112</td>\n",
+       "      <td>thu tuc</td>\n",
+       "      <td>web site</td>\n",
+       "      <td>cong  an</td>\n",
+       "      <td>2024-02-17 04:57:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>FB1110</td>\n",
+       "      <td>CD123</td>\n",
+       "      <td>an ninh</td>\n",
+       "      <td>hotline</td>\n",
+       "      <td>phong  tnmt</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>FB1114</td>\n",
+       "      <td>CD140</td>\n",
+       "      <td>an  ninh</td>\n",
+       "      <td>app</td>\n",
+       "      <td>ubnd  phuong</td>\n",
+       "      <td>2024-01-14 10:20:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>FB1115</td>\n",
+       "      <td>CD148</td>\n",
+       "      <td>ha tang</td>\n",
+       "      <td>hot line</td>\n",
+       "      <td>ubnd phuong</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>FB1119</td>\n",
+       "      <td>cd106</td>\n",
+       "      <td>ha  tang</td>\n",
+       "      <td>app</td>\n",
+       "      <td>phong tnmt</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>66 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    feedback_id citizen_id        category   channel    department  \\\n",
+       "2        FB1001      CD114         ha tang  web site   phong  tnmt   \n",
+       "3        FB1002      CD142        ha  tang   hotline  ubnd  phuong   \n",
+       "4        FB1003      cd102  m√¥i tr∆∞·ªùng  hot line      cong  an   \n",
+       "10       FB1007     CD127          ha tang   website      cong  an   \n",
+       "13       FB1009      cd147         thu tuc   hotline    phong tnmt   \n",
+       "..          ...        ...             ...       ...           ...   \n",
+       "133      FB1106     CD112          thu tuc  web site      cong  an   \n",
+       "139      FB1110      CD123         an ninh   hotline   phong  tnmt   \n",
+       "145      FB1114      CD140        an  ninh       app  ubnd  phuong   \n",
+       "147      FB1115      CD148         ha tang  hot line   ubnd phuong   \n",
+       "151      FB1119      cd106        ha  tang       app    phong tnmt   \n",
+       "\n",
+       "            submit_time status  \n",
+       "2                   NaT    NaN  \n",
+       "3   2024-01-30 15:36:00    NaN  \n",
+       "4                   NaT    NaN  \n",
+       "10  2024-02-28 12:23:00    NaN  \n",
+       "13                  NaT    NaN  \n",
+       "..                  ...    ...  \n",
+       "133 2024-02-17 04:57:00    NaN  \n",
+       "139                 NaT    NaN  \n",
+       "145 2024-01-14 10:20:00    NaN  \n",
+       "147                 NaT    NaN  \n",
+       "151                 NaT    NaN  \n",
+       "\n",
+       "[66 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#2.4Tìm phản ánh thông tin chưa xử lý\n",
+    "feedback_resolution = feedback_df.merge(\n",
+    "    resolution_df[['feedback_id', 'status']],\n",
+    "    on='feedback_id',\n",
+    "    how='left'\n",
+    ")\n",
+    "\n",
+    "unresolved_feedback = feedback_resolution[\n",
+    "    feedback_resolution['status'].isna() |\n",
+    "    (feedback_resolution['status'].str.strip() == '')\n",
+    "]\n",
+    "\n",
+    "unresolved_feedback"
+   ]
   }
  ],
  "metadata": {
