--- a/task02_query.ipynb
+++ b/task02_query.ipynb
@@ -697,6 +697,51 @@
     "\n",
     "unresolved_feedback"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "121"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2.5 Thống kê số phản ánh tồn đọng/quá hạn\n",
+    "\n",
+    "THRESHOLD_HOURS = 72  #ngưỡng số giờ xử lý do giảng viên quy định\n",
+    "#phản ánh tồn đọng\n",
+    "backlog_feedback = feedback_resolution.merge(\n",
+    "    resolution_df[['feedback_id', 'resolution_hours']],\n",
+    "    on='feedback_id',\n",
+    "    how='left'\n",
+    ")\n",
+    "backlog_feedback = backlog_feedback[\n",
+    "    backlog_feedback['resolution_hours'].isna() |\n",
+    "    (backlog_feedback['resolution_hours'] > THRESHOLD_HOURS)\n",
+    "]\n",
+    "\n",
+    "backlog_feedback\n",
+    "#thống kê số lượng tồn đọng\n",
+    "backlog_count = backlog_feedback.shape[0]\n",
+    "backlog_count\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
