[Task03] Hoàn thành notebook groupby

--- a/task03_groupby/task03_groupby.ipynb
+++ b/task03_groupby/task03_groupby.ipynb
@@ -3,10 +3,156 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36decc0a",
+   "id": "7f031a0e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#đọc dữ liệu\n",
+    "import pandas as pd\n",
+    "\n",
+    "citizen_df = pd.read_csv(\"../data_clean/citizen_info_clean.csv\")\n",
+    "feedback_df = pd.read_csv(\"../data_clean/feedback_log_clean.csv\")\n",
+    "resolution_df = pd.read_csv(\"../data_clean/resolution_time_clean.csv\")\n",
+    "\n",
+    "feedback_df['submit_time'] = pd.to_datetime(feedback_df['submit_time'])\n",
+    "resolution_df['resolved_time'] = pd.to_datetime(resolution_df['resolved_time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52ad4b2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3.1 Số lượng phản ánh trung bình theo area\n",
+    "\n",
+    "    #Gộp feedback với area\n",
+    "feedback_area = feedback_df.merge(\n",
+    "    citizen_df[['citizen_id', 'area']],\n",
+    "    on='citizen_id',\n",
+    "    how='left'\n",
+    ")\n",
+    "#đếm phản ánh theo area x category\n",
+    "area_category_count = (\n",
+    "    feedback_area\n",
+    "    .groupby(['area', 'category'])\n",
+    "    .size()\n",
+    "    .reset_index(name='feedback_count')\n",
+    ")\n",
+    " # tính trung bình theo area\n",
+    "avg_feedback_area_category = (\n",
+    "    area_category_count\n",
+    "    .groupby('area')['feedback_count']\n",
+    "    .mean()\n",
+    "    .reset_index(name='avg_feedback_per_category')\n",
+    "    .sort_values('avg_feedback_per_category', ascending=False)\n",
+    ")\n",
+    "\n",
+    "avg_feedback_area_category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f87b413",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3.2 thời gian xử lý trung bình theo department\n",
+    "#Gộp feedback + resolution\n",
+    "feedback_resolution = feedback_df.merge(\n",
+    "    resolution_df[['feedback_id', 'resolution_hours']],\n",
+    "    on='feedback_id',\n",
+    "    how='left'\n",
+    ")\n",
+    "#Groupby department\n",
+    "avg_resolution_by_department = (\n",
+    "    feedback_resolution\n",
+    "    .groupby('department')['resolution_hours']\n",
+    "    .mean()\n",
+    "    .reset_index(name='avg_resolution_hours')\n",
+    "    .sort_values('avg_resolution_hours', ascending=False)\n",
+    ")\n",
+    "\n",
+    "avg_resolution_by_department\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd951a3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3.4So sánh thời gian xử lý trung bình giữa các channel\n",
+    "avg_resolution_by_channel = (\n",
+    "    feedback_resolution\n",
+    "    .groupby('channel')['resolution_hours']\n",
+    "    .mean()\n",
+    "    .reset_index(name='avg_resolution_hours')\n",
+    "    .sort_values('avg_resolution_hours', ascending=False)\n",
+    ")\n",
+    "\n",
+    "avg_resolution_by_channel\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "591589ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3.5 Xác định area hoặc department có thời gian xử lý cao bất thường\n",
+    "#Theo department\n",
+    "mean_hr = resolution_df['resolution_hours'].mean()\n",
+    "std_hr = resolution_df['resolution_hours'].std()\n",
+    "\n",
+    "abnormal_threshold = mean_hr + 1.5 * std_hr\n",
+    "\n",
+    "abnormal_departments = (\n",
+    "    feedback_resolution\n",
+    "    .groupby('department')['resolution_hours']\n",
+    "    .mean()\n",
+    "    .reset_index(name='avg_resolution_hours')\n",
+    ")\n",
+    "\n",
+    "abnormal_departments = abnormal_departments[\n",
+    "    abnormal_departments['avg_resolution_hours'] > abnormal_threshold\n",
+    "]\n",
+    "\n",
+    "abnormal_departments\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ff36d56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Theo area\n",
+    "feedback_area_resolution = feedback_area.merge(\n",
+    "    resolution_df[['feedback_id', 'resolution_hours']],\n",
+    "    on='feedback_id',\n",
+    "    how='left'\n",
+    ")\n",
+    "\n",
+    "abnormal_areas = (\n",
+    "    feedback_area_resolution\n",
+    "    .groupby('area')['resolution_hours']\n",
+    "    .mean()\n",
+    "    .reset_index(name='avg_resolution_hours')\n",
+    ")\n",
+    "\n",
+    "abnormal_areas = abnormal_areas[\n",
+    "    abnormal_areas['avg_resolution_hours'] > abnormal_threshold\n",
+    "]\n",
+    "\n",
+    "abnormal_areas\n"
+   ]
   }
  ],
  "metadata": {
@@ -16,7 +162,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.9"
   }
  },
